// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame should render a combobox variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a combobox variant with a placeholder 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a custom dropdown 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a default variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select default"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="0"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="placeholder"
    >
       
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a default variant with a placeholder 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select default"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="0"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="placeholder"
    >
      Placeholder
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a disabled combobox variant 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="select tag is-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="-1"
>
  <div
    aria-disabled={true}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={true}
          aria-label="search"
          className="search-input"
          disabled={true}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a disabled default variant 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="select default is-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="-1"
>
  <div
    aria-disabled={true}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="placeholder"
    >
       
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a disabled multiple variant 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="select multiple is-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="-1"
>
  <div
    aria-disabled={true}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={true}
          aria-label="search"
          className="search-input"
          disabled={true}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a disabled search variant 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="select search is-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="-1"
>
  <div
    aria-disabled={true}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="content"
    >
      <input
        aria-disabled={true}
        aria-label="search"
        className="search-input"
        disabled={true}
        onChange={[Function]}
        onMouseDown={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a disabled tag variant 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="select tag is-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="-1"
>
  <div
    aria-disabled={true}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={true}
          aria-label="search"
          className="search-input"
          disabled={true}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a multiple variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select multiple"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a multiple variant with a placeholder 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select multiple"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a search variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select search"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="content"
    >
      <input
        aria-disabled={false}
        aria-label="search"
        className="search-input"
        disabled={false}
        onChange={[Function]}
        onMouseDown={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a search variant with a placeholder 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select search"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="content"
    >
      <input
        aria-disabled={false}
        aria-label="search"
        className="search-input"
        disabled={false}
        onChange={[Function]}
        onMouseDown={[Function]}
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a tag variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render a tag variant with a placeholder 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render an invalid combobox variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag is-invalid"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render an invalid default variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select default is-invalid"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="0"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="placeholder"
    >
       
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render an invalid multiple variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select multiple is-invalid"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render an invalid search variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select search is-invalid"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <div
      className="content"
    >
      <input
        aria-disabled={false}
        aria-label="search"
        className="search-input"
        disabled={false}
        onChange={[Function]}
        onMouseDown={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should render an invalid tag variant 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="listbox"
  className="select tag is-invalid"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex="-1"
>
  <div
    aria-disabled={false}
    className="display"
    onMouseDown={[Function]}
    role="textbox"
  >
    <ul
      className="content"
    >
      <li
        className="search-wrapper"
      >
        <input
          aria-disabled={false}
          aria-label="search"
          className="search-input"
          disabled={false}
          onChange={[Function]}
          onMouseDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="toggle"
    onMouseDown={[Function]}
  >
    <span
      className="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    className="visually-hidden-component"
    role="alert"
  />
</div>
`;

exports[`Frame should update the aria-live text when the search has no results 1`] = `
<Frame
  disabled={false}
  dropdown={[Function]}
  isInvalid={false}
  variant="tag"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="listbox"
    className="select tag"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="-1"
  >
    <div
      aria-disabled={false}
      className="display"
      onMouseDown={[Function]}
      role="textbox"
    >
      <ul
        className="content"
      >
        <li
          className="search-wrapper"
        >
          <input
            aria-disabled={false}
            aria-label="search"
            className="search-input"
            disabled={false}
            onChange={[Function]}
            onMouseDown={[Function]}
            type="text"
            value="qwqerewqrwqer"
          />
        </li>
      </ul>
    </div>
    <div
      className="toggle"
      onMouseDown={[Function]}
    >
      <span
        className="arrow-icon"
      />
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      className="visually-hidden-component"
      role="alert"
    />
  </div>
</Frame>
`;
